--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -19,6 +19,7 @@ $bg-colour-2: #d499ea;
 $bg-colour-3: #eea4b3;
 $bg-colour-4: #434057;
 $bg-colour-5: #f4f5f7;
+$bg-colour-6: #f8f9fa;
 $footer_bg-colour: #2d2e35;
 
 $font-dark-colour: #2e2d36;
