--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -10336,7 +10336,7 @@ html {
   }
 
   .mobile-navbar-content {
-    position: fixed;
+    position: absolute;
     width: 100%;
     background: #f8f9fa;
     z-index: 13;
@@ -11353,6 +11353,543 @@ html {
   color: white;
 }
 
+.houses-for-rent-container {
+  position: fixed;
+  overflow-y: scroll;
+  padding-top: 80px;
+}
+
+.scroll-area-container {
+  position: relative;
+}
+
+.house-search-panel {
+  position: absolute;
+  height: 50px;
+  z-index: 13;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  border-bottom: 1px solid #e9eaef;
+  background-color: white;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.house-search-panel-small-device {
+  display: none;
+}
+
+.house-location-container {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.house-location-container .panel-menu-icon {
+  cursor: pointer;
+  min-width: 20px;
+  min-height: 20px;
+  color: #7c54c1;
+  margin-right: 10px;
+}
+.house-location-container .house-location-text {
+  text-align: center;
+  color: #7c54c1;
+  margin: 0 10px 0 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.hide-dropdown-container {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  cursor: pointer;
+}
+.hide-dropdown-container .panel-menu-icon {
+  min-width: 14px;
+  min-height: 14px;
+  color: #7c54c1;
+  margin-right: 10px;
+  transform: rotate(180deg);
+}
+.hide-dropdown-container .hide-dropdown-text {
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #7c54c1;
+}
+
+.filter-dropdown {
+  position: relative;
+  cursor: pointer;
+  white-space: nowrap;
+}
+.filter-dropdown .filter-dropdown-text {
+  font-size: 14px;
+  color: #9a99b6;
+}
+.filter-dropdown .filter-dropdown-icon {
+  margin-left: 10px;
+  color: #7c54c1;
+}
+
+.dropdown-option-container {
+  cursor: pointer;
+  white-space: nowrap;
+  background-color: white;
+  position: absolute;
+  right: 0;
+  top: 32px;
+}
+
+.dropdown-option {
+  line-height: 20px;
+  height: 50px;
+  padding: 0 20px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  transition: background-color 0.2s ease;
+  color: #2e2d36;
+}
+.dropdown-option:hover {
+  background-color: #f2f3f5;
+}
+
+.filter-options-panel {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  top: 0;
+  left: 0;
+  padding-top: 70px;
+  z-index: 11;
+  background-color: #f8f9fa;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-out;
+}
+
+.filter-options-panel-enter {
+  transform: translateY(0%);
+}
+
+.panel-container {
+  padding-top: 25px;
+}
+
+.panel-price {
+  font-weight: 700;
+  color: white;
+  background-color: #f7a31d;
+  padding: 0 15px;
+  height: 30px;
+  border-radius: 20px;
+  line-height: 30px;
+  text-align: center;
+}
+.panel-price .plus {
+  font-weight: 400;
+}
+
+.panel-slider .MuiSlider-root {
+  width: 95%;
+}
+.panel-slider .MuiSlider-thumb {
+  width: 30px;
+  height: 30px;
+  margin-top: -13px;
+  transition: none;
+  box-shadow: 1px 2px 4px 1px rgba(46, 45, 54, 0.2);
+  background: white;
+}
+.panel-slider .MuiSlider-track {
+  height: 8px;
+  background-color: #7c54c1;
+}
+.panel-slider .MuiSlider-rail {
+  height: 8px;
+  background-color: mediumpurple;
+}
+
+.panel-heading {
+  padding-top: 10px;
+}
+.panel-heading h4 {
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 700;
+}
+
+.panel-options-container,
+.panel-icon-container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  cursor: pointer;
+}
+
+.panel-options {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  background: white;
+  cursor: pointer;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px 0 rgba(50, 48, 58, 0.15);
+  color: #2e2d36;
+}
+.panel-options.active {
+  background-color: #7c54c1;
+  color: white;
+}
+
+.panel-icon-container {
+  display: flex;
+  align-items: center;
+}
+
+.panel-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  height: 40px;
+  width: 40px;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 2px 0 rgba(50, 48, 58, 0.15);
+}
+.panel-icon .svg-icon {
+  width: 24px;
+  height: 24px;
+}
+.panel-icon.active {
+  background-color: #7c54c1;
+  color: white;
+}
+
+.panel-icon-text {
+  margin-left: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  color: #2e2d36;
+  white-space: nowrap;
+}
+
+.panel-button {
+  padding-bottom: 100px;
+}
+.panel-button button {
+  color: #7c54c1;
+  border: 1px solid #7c54c1;
+  padding: 4px 25px;
+  border-radius: 3px;
+  background: transparent;
+  transition: all 0.3s ease-out;
+}
+.panel-button button:hover {
+  color: white;
+  background-color: #7c54c1;
+}
+
+.find-property-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 11;
+  transform: translateY(-100vh);
+  transition: transform 0.3s ease-in-out;
+}
+.find-property-btn button {
+  height: 60px;
+  line-height: 60px;
+  width: 100%;
+  font-size: 24px;
+  font-weight: 700;
+  border: none;
+  color: white;
+  background-color: #7c54c1;
+}
+
+.find-property-btn-enter {
+  visibility: visible;
+  transform: translateY(0vh);
+}
+
+.house-scroll-area {
+  margin-top: 50px;
+  overflow-y: auto;
+  height: auto;
+  max-height: calc(100vh - 130px);
+}
+
+.house-cards {
+  position: relative;
+  margin: 10px 0;
+  transition: all 0.3s ease-out;
+}
+
+.house-card-header {
+  padding-top: 10px;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.house-price {
+  cursor: pointer;
+  position: absolute;
+  padding: 3px 16px;
+  border-radius: 20px;
+  background-color: #f7a31d;
+  top: 20px;
+  left: 20px;
+  color: white;
+  z-index: 1;
+}
+.house-price .price-text {
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.house-card-text {
+  padding: 9px 0 15px 0;
+  font-size: 14px;
+  color: #858e98;
+}
+
+.house-card-footer {
+  padding-top: 16px;
+  border-top: 1px solid #e9eaef;
+  display: flex;
+}
+.house-card-footer .house-card-icon-container {
+  margin-right: 12px;
+}
+.house-card-footer .house-card-icon-container .svg-icon {
+  padding-right: 6px;
+}
+.house-card-footer .house-card-icon-container span {
+  text-align: center;
+}
+.house-card-footer .house-card-icon-container svg {
+  height: 20px;
+}
+
+.rental-map {
+  min-height: calc(100vh - 80px);
+  background-color: mediumpurple;
+}
+
+@media (max-width: 768px) {
+  .house-location-container .panel-menu-icon {
+    display: none;
+  }
+  .house-location-container .house-location-text {
+    display: block;
+    font-size: 14px;
+    color: #2e2d36;
+    line-height: 20px;
+  }
+
+  .house-search-panel-small-device {
+    position: absolute;
+    height: 50px;
+    z-index: 12;
+    width: 100%;
+    left: 0;
+    top: 50px;
+    bottom: 0;
+    border-bottom: 1px solid #e9eaef;
+    background-color: white;
+    padding: 0 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .small-device-menu-container {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+  .small-device-menu-container .panel-menu-icon {
+    min-width: 16px;
+    min-height: 16px;
+    color: #7c54c1;
+    margin-right: 10px;
+  }
+  .small-device-menu-container .small-device-menu-text {
+    text-align: center;
+    color: #7c54c1;
+    margin: 0 10px 0 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .house-scroll-area {
+    margin-top: 100px;
+    height: calc(100vh - 150px);
+  }
+
+  .filter-options-panel {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .panel-button {
+    display: none;
+  }
+
+  .panel-icon {
+    height: 30px;
+    width: 30px;
+  }
+  .panel-icon .svg-icon {
+    width: 18px;
+    height: 18px;
+  }
+
+  .panel-icon-text {
+    font-size: 12px;
+    margin-left: 5px;
+    overflow: hidden;
+  }
+}
+@media (max-width: 1080px) {
+  .houses-for-rent-container {
+    padding-top: 50px;
+  }
+
+  .house-scroll-area {
+    max-height: calc(100vh - 100px);
+  }
+}
+@media (min-width: 768px) and (max-width: 1500px) {
+  .house-card-footer .house-card-icon-container {
+    margin-right: 0;
+  }
+  .house-card-footer .house-card-icon-container .svg-icon {
+    padding-right: 0;
+    padding-bottom: 1px;
+  }
+  .house-card-footer .house-card-icon-container span {
+    font-size: 11px;
+    text-align: center;
+  }
+  .house-card-footer .house-card-icon-container svg {
+    height: 14px;
+  }
+}
+@media (max-width: 476px) {
+  .house-card-footer .house-card-icon-container {
+    margin-right: 2px;
+  }
+  .house-card-footer .house-card-icon-container .svg-icon {
+    padding-right: 1px;
+    padding-bottom: 1px;
+  }
+  .house-card-footer .house-card-icon-container span {
+    font-size: 12px;
+    text-align: center;
+  }
+  .house-card-footer .house-card-icon-container svg {
+    height: 15px;
+  }
+}
+.header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-btn-container, .header-input {
+  flex-direction: column;
+}
+
+.rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
+  flex-direction: row;
+}
+
+.listing-categories-section a, .available-cities-section a, .footer p, .footer a {
+  font-size: 14px;
+  line-height: 20px;
+  color: mediumpurple;
+  cursor: pointer;
+}
+
+.listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header {
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 700;
+}
+
+.perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  color: white;
+}
+
+.MuiInput-underline:after {
+  border-bottom: 2px solid mediumpurple;
+}
+
+.MuiInput-underline:before {
+  border-bottom: 2px solid #d2d4df;
+}
+
+.MuiMenuItem-root {
+  line-height: 2;
+}
+
+.header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-btn-container, .header-input {
+  flex-direction: column;
+}
+
+.rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
+  flex-direction: row;
+}
+
+.listing-categories-section a, .available-cities-section a, .footer p, .footer a {
+  font-size: 14px;
+  line-height: 20px;
+  color: mediumpurple;
+  cursor: pointer;
+}
+
+.listing-categories-section h1, .available-cities-section h1, .cities-title h1, .renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header {
+  font-size: 48px;
+  line-height: 48px;
+  font-weight: 700;
+}
+
+.perfect-place-section .perfect-place-content button, .rental-instruction .learn-more-btn button, .header-btn-container button, .rent-list-btn button, .go-to-inbox, .renting-search .renting-search-content button {
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  font-weight: 700;
+  color: white;
+}
+
 .header-btn-container, .header-input, .rental-steps-container .switch-btn, .rental-steps-container .switch, .rent-list-btn, .nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn {
   display: flex;
   align-items: center;
@@ -11848,52 +12385,6 @@ html {
   .city-container {
     height: auto;
   }
-}
-.nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn, .header-input, .rent-list-btn, .header-btn-container, .rental-steps-container .switch, .rental-steps-container .switch-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header-input, .header-btn-container {
-  flex-direction: column;
-}
-
-.nav-item-container, .nav-items, .list-property, .renting-header .switch, .renting-header .switch-btn, .rent-list-btn, .rental-steps-container .switch, .rental-steps-container .switch-btn {
-  flex-direction: row;
-}
-
-.footer p, .footer a, .available-cities-section a, .listing-categories-section a {
-  font-size: 14px;
-  line-height: 20px;
-  color: mediumpurple;
-  cursor: pointer;
-}
-
-.renting-header .renting-header-text h1, .renting-services h1, .tips h1, .renting-search .renting-search-content h1, .section-header, .cities-title h1, .available-cities-section h1, .listing-categories-section h1 {
-  font-size: 48px;
-  line-height: 48px;
-  font-weight: 700;
-}
-
-.go-to-inbox, .renting-search .renting-search-content button, .rent-list-btn button, .header-btn-container button, .rental-instruction .learn-more-btn button, .perfect-place-section .perfect-place-content button {
-  text-align: center;
-  border: none;
-  cursor: pointer;
-  font-weight: 700;
-  color: white;
-}
-
-.MuiInput-underline:after {
-  border-bottom: 2px solid mediumpurple;
-}
-
-.MuiInput-underline:before {
-  border-bottom: 2px solid #d2d4df;
-}
-
-.MuiMenuItem-root {
-  line-height: 2;
 }
 
 /*# sourceMappingURL=style.css.map */
