--- a/src/assets/scss/_housesForRent.scss
+++ b/src/assets/scss/_housesForRent.scss
@@ -63,13 +63,15 @@
   cursor: pointer;
 
   .panel-menu-icon {
-    min-width: 16px;
-    min-height: 16px;
+    min-width: 14px;
+    min-height: 14px;
     color: $deep-purple;
     margin-right: 10px;
     transform: rotate(180deg);
   }
   .hide-dropdown-text {
+    font-size: $small-font-size;
+    line-height: $small-line-height;
     text-align: center;
     color: $deep-purple;
   }
@@ -111,7 +113,7 @@
 }
 
 //Search control panel
-.search-control-panel {
+.filter-options-panel {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -126,7 +128,7 @@
   transition: transform 0.3s ease-out;
 }
 
-.search-control-enter {
+.filter-options-panel-enter {
   transform: translateY(0%);
 }
 
@@ -397,7 +399,7 @@
   }
 
   // Search control panel for small devices
-  .search-control-panel {
+  .filter-options-panel {
     padding-top: 100px;
     padding-bottom: 100px;
   }
