--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,5 +5,6 @@
  @import "footer";
  @import "renting";
  @import "addProperty";
- @import "home";
+ @import "housesForRent";
  @import "muiOverride";
+ @import "home";
