--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,5 +6,6 @@
  @import "renting";
  @import "addProperty";
  @import "housesForRent";
+ @import "houseDetails";
  @import "muiOverride";
  @import "home";
