--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,8 +8,14 @@ $small-line-height: 22px;
 $medium-font-size: 20px;
 $medium-line-height: 28px;
 
+$medium-large-font-size: 24px;
+$medium-large-line-height: 28px;
+
 $large-font-size: 48px;
 $large-line-height: 48px;
+
+$largest-font-size: 72px;
+$largest-line-height: 72px;
 
 $font-weight: 700;
 
@@ -20,6 +26,7 @@ $bg-colour-3: #eea4b3;
 $bg-colour-4: #434057;
 $bg-colour-5: #f4f5f7;
 $bg-colour-6: #f8f9fa;
+$bg-overlay-colour: rgba(20,16,52,.69);
 $footer_bg-colour: #2d2e35;
 
 $font-dark-colour: #2e2d36;
@@ -28,6 +35,7 @@ $mediumpurple: mediumpurple;
 $deep-purple: #7c54c1;
 $deeper-purple: #7a1ea0;
 $light-yellow: #f7a31d;
+$light-green: #53c160;
 $light-border: #e9eaef;
 $hover-color: #f2f3f5;
 $placeholder-colour: #9a99b6;
