--- a/src/assets/scss/_houseDetails.scss
+++ b/src/assets/scss/_houseDetails.scss
@@ -34,8 +34,7 @@
 
 .animate {
   transform: scale(1);
-  -webkit-animation: zoominout 2.5s ease-out 1 normal;
-  animation: zoominout 2.5s ease-out 1 normal;
+  transition: transform 2.5s ease-out;
 }
 
 .property-header-address {
