--- a/src/assets/scss/_houseDetails.scss
+++ b/src/assets/scss/_houseDetails.scss
@@ -1,5 +1,7 @@
 @import "variables";
 
+// Property header section
+
 .property-header-container {
   padding-bottom: $large-section-spacing;
 }
@@ -166,4 +168,13 @@
   border-bottom-right-radius: 6px;
   -moz-border-radius-bottomleft: 6px;
   -moz-border-radius-bottomright: 6px;
+}
+
+
+// Property images section
+.property-image-container {
+  @extend %listing-image-container;
+}
+.property-image {
+  @extend %listing-image;
 }
