--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -89,3 +89,31 @@ $svg-big-size: 30px;
   font-weight: $font-weight;
   color: white;
 }
+
+%listing-image-container{
+  position: relative;
+  bottom: 70px;
+}
+
+%listing-image{
+  position: relative;
+  cursor: pointer;
+  height: 250px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  background-color: $bg-colour-5;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  transition: all 0.3s ease-out;
+  margin-top: 30px;
+
+  &:hover {
+    box-shadow: 0 8px 12px 0 rgba(46, 45, 54, 0.25);
+    transform: scale(1.1);
+  }
+}
