--- a/src/assets/scss/_houseDetails.scss
+++ b/src/assets/scss/_houseDetails.scss
@@ -178,3 +178,25 @@
 .property-image {
   @extend %listing-image;
 }
+
+.show-more-properties{
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  span{
+    font-size: $smallest-font-size;
+    line-height: $smallest-line-height;
+    color: $mediumpurple;
+    cursor: pointer;
+    &:hover{
+      border-bottom: 1px solid $mediumpurple;
+    }
+  }
+}
+
+
+
+
+
+
